--- a/app/src/main/res/layout/activity_add_new_course1.xml
+++ b/app/src/main/res/layout/activity_add_new_course1.xml
@@ -66,7 +66,15 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
-
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Next -->"
+        android:id="@+id/nextButton"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:singleLine="true"
+        android:background="#ff2ba89f" />
 
 
 
